# nomades-projects-portfoliopulse-backend

./: .editorconfig  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py  pyproject.toml
app/core/: config.py  database.py  firestore_db.py  security.py
app/machine_learning/: data_processing.py  evaluation.py  lstm.py
app/models/: asset.py  auth.py  portfolio.py  prediction.py  transaction.py  user.py
app/repository/: __init__.py  asset.py  portfolio.py  prediction.py  transaction.py  user.py
app/routes/: asset.py  auth.py  portfolio.py  prediction.py  transaction.py  user.py
app/schemas/: asset.py  auth.py  portfolio.py  prediction.py  transaction.py  user.py
app/services/: __init__.py  asset.py  auth.py  authentication.py  portfolio.py  prediction.py  transaction.py  user.py
app/utils/: jwt.py
docker-entrypoint-initdb.d/: mongo-init.js
